--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@
     fabric_version=0.25.1+build.416-1.16
 
     prism_version=2.0.0
-    jsmacros_version=1.3.0
+    jsmacros_version=1.4.0-beta-f25b3c2
