--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,12 @@
     org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-    minecraft_version=1.16.4
-    yarn_mappings=1.16.4+build.7
+    minecraft_version=1.17.1
+    yarn_mappings=1.17.1+build.1
     loader_version=0.9.3+build.207
 # Mod Properties
-    mod_version=1.0.1
+    mod_version=1.0.2
     maven_group=xyz.wagyourtail
     archives_base_name=jsmacros-ruby
 # Dependencies
-# check this on https://modmuss50.me/fabric.html
-    fabric_version=0.25.1+build.416-1.16
-
-    prism_version=2.0.0
-    jsmacros_version=1.4.0-beta-cd3bbfd
+    jsmacros_version=1.5.0
