--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,17 @@
     yarn_mappings=1.17.1+build.1
     loader_version=0.9.3+build.207
 # Mod Properties
-    mod_version=1.0.2
+    mod_version=1.0.3
     maven_group=xyz.wagyourtail
     archives_base_name=jsmacros-ruby
+
 # Dependencies
-    jsmacros_version=1.5.0
+    api_base_version=0.3.0+a02b4463a0
+    lifecycle_events_version=1.4.4+a02b4463a0
+    key_bind_api_version=1.0.4+a02b4463a0
+    command_api_version=1.1.2+6cefd57713
+    resource_loader_version=0.4.7+b7ab6121a0
+
+    jsmacros_version=e446ce9d95
+    prism_version=2.0.0
+    graal_version=21.2.0
