--- a/gradle.properties
+++ b/gradle.properties
@@ -2,21 +2,15 @@
     org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-    minecraft_version=1.17.1
-    yarn_mappings=1.17.1+build.1
-    loader_version=0.9.3+build.207
+    minecraft_version=1.19
+    yarn_mappings=1.19+build.1
+    loader_version=0.13.3
 # Mod Properties
-    mod_version=1.0.3
+    mod_version=1.0.4
     maven_group=xyz.wagyourtail
     archives_base_name=jsmacros-ruby
 
 # Dependencies
-    api_base_version=0.3.0+a02b4463a0
-    lifecycle_events_version=1.4.4+a02b4463a0
-    key_bind_api_version=1.0.4+a02b4463a0
-    command_api_version=1.1.2+6cefd57713
-    resource_loader_version=0.4.7+b7ab6121a0
-
-    jsmacros_version=e446ce9d95
+    jsmacros_version=f8d39357c0
     prism_version=2.0.0
     graal_version=21.2.0
