--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,10 @@
 # Done to increase the memory available to gradle.
-    org.gradle.jvmargs=-Xmx4G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-    minecraft_version=1.19
-    yarn_mappings=1.19+build.1
-    loader_version=0.13.3
+org.gradle.jvmargs=-Xmx4G
+
 # Mod Properties
-    mod_version=1.0.6
-    maven_group=xyz.wagyourtail
-    archives_base_name=jsmacros-ruby
+version=1.0.7
+maven_group=xyz.wagyourtail
+archives_base_name=jsmacros-ruby
 
 # Dependencies
-    jsmacros_version=f8d39357c0
-    prism_version=2.0.0
-    graal_version=21.2.0
+jsmacros_version=907b02b570
