--- a/build.gradle
+++ b/build.gradle
@@ -1,85 +1,86 @@
 plugins {
-    id 'fabric-loom' version '0.11-SNAPSHOT'
     id 'maven-publish'
+    id 'java'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 archivesBaseName = project.archives_base_name
-version = project.mod_version
+version = project.property("version")
 group = project.maven_group
 
 repositories {
-    flatDir {
-        dirs 'libs'
-    }
     mavenCentral()
     maven {
-        name "Modmuss50 Repository"
-        url 'https://maven.fabricmc.net/'
+        url 'https://jitpack.io'
+        metadataSources {
+            artifact()
+        }
     }
-    maven { url 'https://maven.terraformersmc.com/releases/' }
-    maven { url 'https://jitpack.io' }
-    maven { url 'https://www.cursemaven.com/'}
+}
+
+configurations {
+    jsmacrosExtensionInclude
 }
 
 dependencies {
-    //to change the versions see the gradle.properties file
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha7'
+    implementation 'com.google.code.gson:gson:2.9.0'
+    testImplementation 'org.slf4j:slf4j-simple:2.0.0-alpha7'
+    implementation 'javassist:javassist:3.12.1.GA'
+    implementation 'fastutil:fastutil:5.0.9'
+    implementation "com.github.jsmacros.jsmacros:jsmacros-1.19:${project.jsmacros_version}"
 
-    implementation "org.jruby:jruby-complete:9.2.19.0"
-    include "org.jruby:jruby-complete:9.2.19.0"
+    implementation "org.jruby:jruby-complete:9.3.6.0"
+    jsmacrosExtensionInclude "org.jruby:jruby-complete:9.3.6.0"
 
-    modImplementation "com.github.wagyourtail:jsmacros:${project.jsmacros_version}"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'org.jetbrains:annotations:16.0.2'
 }
 
 processResources {
-    inputs.property "version", project.version
-
-    filesMatching("fabric.mod.json") {
-        expand "version": project.version
+    filesMatching("jsmacros.ext.jruby.json") {
+        expand "dependencies": configurations.jsmacrosExtensionInclude.files.collect { it.name }.join(" ")
     }
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-tasks.withType(JavaCompile) {
+compileJava {
     options.encoding = "UTF-8"
+    def targetVersion = 8
+    if (JavaVersion.current().isJava9Compatible()) {
+        it.options.release = targetVersion
+    }
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = "sources"
-    from sourceSets.main.allSource
+compileTestJava {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+
+    options.release.set(17)
 }
+
 
 jar {
     from "LICENSE"
+    from (configurations.jsmacrosExtensionInclude.files) {
+        include '*'
+        into "META-INF/jsmacrosdeps"
+    }
+}
+
+test {
+    useJUnitPlatform()
 }
 
 // configure the maven publication
 publishing {
     publications {
-        mavenJava(MavenPublication) {
-            // add all the jars that should be included when publishing to maven
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
-        }
     }
-
-    // select the repositories you want to publish to
     repositories {
-        // uncomment to publish to the local maven
-        // mavenLocal()
     }
 }
+
